package protobuf.message.messageProto;
option java_package = "protobuf.message.messageClass";
option java_outer_classname = "OutBulletInfoMessage";

message BulletInfoMessage{
    required int32 bulletId=1;
    required int32 bulletLocationX=2;
    required int32 bulletLocationY=3;
}