package protobuf.message.messageProto;
option java_package = "protobuf.message.messageClass";
option java_outer_classname = "OutReqNetWorkGameMessage";

message NetWorkGameMessage{
}